overlaping fixed

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ a:hover {
 }
 .links{
   -webkit-user-select: none;
+  user-select: none;
 }
 /* navigation container styles */
  #nav {
@@ -137,7 +138,7 @@ width: 90%;
     align-items: center;
     /* margin-top: 1.25rem; */
     -webkit-user-select: none;
-
+    user-select: none;
 }
 
 .ujFlat{
@@ -365,7 +366,7 @@ text-align: center;
 opacity: 0.8;
 }
 #pricing{
-background-color: ##5F8D4E;
+
 
   padding: 4% 10%;
 }
@@ -437,7 +438,7 @@ margin: 1.2rem 0;
   cursor: pointer;
  
   -webkit-user-select: none;
-
+  user-select: none;
 }
 
 #mediaBox .controls .toggBtn{
@@ -446,6 +447,7 @@ margin: 1.2rem 0;
     box-shadow: 0 3px 5px rgba(0,0,0,.3);
     cursor: pointer;
     -webkit-user-select: none;
+    user-select: none;
   }
 
 #mediaBox .controls .toggBtns.active{
@@ -635,9 +637,7 @@ max-width: 320px;
 opacity:0.78
   
 }
-#listB{
 
-}
 
 /* GALLERY */
 
@@ -704,18 +704,14 @@ flex-wrap: nowrap;
     cursor: pointer;
    
     -webkit-user-select: none;
-  
+    user-select: none;
   }
 
   
 
 /* PACKAGES */
 
-#pricing{
-  background-color: ##5F8D4E;
-  
 
-  }
 .pricing-plan{
   align-items:normal;
   width: 75%;
@@ -777,6 +773,11 @@ FOOTER
     padding: 0;
     margin: 0;
   }
+ 
+  .row{
+    margin-left:0 ;
+    margin-right:0 ;
+  }
   nav ul li a{
     font-size: 16px;
   }
@@ -790,8 +791,8 @@ FOOTER
     position: absolute;
   width: 100%;
 height: 100vh;
-backdrop-filter: blur(8px);
 -webkit-backdrop-filter:blur(8px);
+backdrop-filter: blur(8px);
 background-color: rgba(0, 0, 0, 0.5);
   
   top:80px;
@@ -799,6 +800,11 @@ background-color: rgba(0, 0, 0, 0.5);
   text-align: center;
   transition: all .5s;
 }
+#main, nav, #zIndex, #gallery, .pricing, #contactPage, footer {
+  min-width: 100%;
+}
+
+
 
 #listB{
   display:block;
@@ -824,6 +830,7 @@ nav ul li a{
 left: 0;
   }
 }
+
 
 .pricing {
   display: flex;
@@ -868,6 +875,7 @@ left: 0;
   .pricing {
     flex-direction: column;
     align-items: center;
+    margin: 0;
   }
 
   .package {
